[metadata]
license_file = LICENSE

[bdist_wheel]
universal=1

[mypy]
follow_imports = silent
check_untyped_defs = True
html_report = ./htmltypecov
linecount_report = ./typecov

[mypy-freezegun.*]
ignore_missing_imports = True

[mypy-mixpanel.*]
ignore_missing_imports = True

[mypy-pyramid.*]
ignore_missing_imports = True

[mypy-responses.*]
ignore_missing_imports = True

[mypy-structlog.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True
